compiler/tests/success/x86-64/bug_615.jazz
export
fn main(reg u64 x) -> reg u64 {
    reg bool lt;

    ?{ "<u" = lt } = #CMP(x, 10);

    while (lt) {
        x += 2;
        ?{ "<u" = lt } = #CMP(x, 10);
    }

    x = x;
    return x;
}
