compiler/tests/fail/x86-64/ignored_zero_extension.jazz
export fn main (reg u64 x) -> reg u64 {
  reg u64 res = x;
  ?{}, res = (64u)#AND_64(res, res);
  return res;
}
